# doc_patch_manager

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.agents/rules/: 01_operacion_lean.md
.agents/skills/skill_edicion_documental_segura/: SKILL.md
docs/: PROTOCOLO_EDICION_SEGURA.md
input/documentos_base/: documento_maestro_arquit_agentica_trabajo.md  guia_estudiante.md
input/planes_cambio/: plan_v1.json
src/: backup_manager.py  change_plan_parser.py  main.py  markdown_loader.py  patch_engine.py  reporter.py  validate_markdown_structure.py  validator.py  verify_document_changes.py
tests/: test_cli_integration.py  test_comcompleto.py  test_integration_basic.py  test_patch_engine.py  test_patch_v111.py  test_validate_markdown_structure.py  test_validator.py  test_verify_document_changes.py
